[package]
name = "patches"
version = "0.1.0"
authors = ["Josh Aaseby <1372945+ozbe@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json-patch = "*"
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]